--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "devDependencies": {
+    "cheerio": "^0.18.0",
     "del": "^1.1.0",
     "gulp": "^3.8.10",
     "gulp-image-resize": "^0.5.0",
     "gulp-imagemin": "^2.0.0",
     "gulp-newer": "^0.4.0",
     "gulp-rename": "^1.2.0",
-    "rwi": "^1.3.4"
+    "gulp-svgmin": "^1.1.0",
+    "gulp-svgstore": "^5.0.0",
+    "rwi": "^1.3.4",
+    "svgo": "^0.5.0"
   }
 }
