--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "gulp-imagemin": "^3.0.1",
     "gulp-newer": "^0.5.0",
     "gulp-rename": "^1.2.2",
-    "gulp-svgmin": "^1.1.2",
-    "gulp-svgstore": "^5.0.1",
-    "svgo": "^0.5.0"
+    "gulp-svgstore": "^5.0.1"
   }
 }
