--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "imgDeploy",
+  "author": "Dave Santos <info@davesantos.com>",
   "devDependencies": {
     "cheerio": "^0.18.0",
     "del": "^1.1.0",
@@ -8,5 +10,10 @@
     "gulp-newer": "^0.5.0",
     "gulp-rename": "^1.2.2",
     "gulp-svgstore": "^5.0.1"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/davesantos/imgDeploy.git"
   }
 }
