--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "imgDeploy",
   "author": "Dave Santos <info@davesantos.com>",
   "devDependencies": {
-    "cheerio": "^0.18.0",
-    "del": "^1.1.0",
-    "gulp": "^3.8.11",
-    "gulp-image-resize": "^0.6.0",
-    "gulp-imagemin": "^3.0.1",
-    "gulp-newer": "^0.5.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-svgstore": "^5.0.1"
+    "del": "3.0.0",
+    "gulp": "3.8.11",
+    "gulp-image-resize": "0.13.0",
+    "gulp-imagemin": "4.1.0",
+    "gulp-newer": "1.4.0",
+    "gulp-rename": "1.2.2",
+    "gulp-svgstore": "6.1.1"
   },
   "license": "MIT",
   "repository": {
