--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "author": "Dave Santos <info@davesantos.com>",
   "devDependencies": {
     "del": "3.0.0",
-    "gulp": "3.8.11",
-    "gulp-image-resize": "0.13.0",
+    "gulp": "^4.0.0",
+    "gulp-image-resize": "^0.13.0",
     "gulp-imagemin": "4.1.0",
     "gulp-newer": "1.4.0",
     "gulp-rename": "1.2.2",
