--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 node_js:
- - 5.1
+ - 9.11.1
  - "stable"
+before_install:
+  - npm i -g npm@6.4.0
 before_script:
   - npm install -g gulp-cli
   - npm install
