--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-  {
+{
   "name": "imgDeploy",
   "author": "Dave Santos <info@davesantos.com>",
   "devDependencies": {
@@ -14,5 +14,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/davesantos/imgDeploy.git"
+  },
+  "dependencies": {
+    "lodash": "^4.17.10",
+    "tunnel-agent": "^0.6.0"
   }
 }
