--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "gulp-imagemin": "^6.2.0",
     "gulp-newer": "1.4.0",
     "gulp-rename": "1.4.0",
-    "gulp-svgstore": "^7.0.1"
+    "gulp-svgstore": "^7.0.1",
+    "yargs-parser": ">=5.0.0-security.0"
+
   },
   "license": "MIT",
   "repository": {
